baml_language/crates/baml_tests/snapshots/compiles/lambda_field_access/baml_tests__compiles__lambda_field_access__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Inner {
  value: int
}
class user.Outer {
  inner: user.Inner
  name: string
}
function user.from_json(j: baml.json.json) -> user.Inner  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Outer  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.test_captured_field_access(obj: user.Outer) -> string  [expr] {
  { let get_name = () -> string { {  } obj.name } } get_name()
}
function user.test_captured_nested_field(obj: user.Outer) -> int  [expr] {
  { let get_value = () -> int { {  } obj.inner.value } } get_value()
}
function user.test_lambda_param_and_capture(obj: user.Outer) -> int  [expr] {
  { let add_to_value = (x: int) -> int { {  } x Add obj.inner.value } } add_to_value(10)
}
function user.test_nested_lambda_capture(obj: user.Outer) -> string  [expr] {
  { let outer_fn = () -> { { let inner_fn = () -> string { {  } obj.name } } inner_fn() } } outer_fn()
}
function user.test_no_leak_after_lambda(obj: user.Outer) -> string  [expr] {
  { let get_value = () -> int { {  } obj.inner.value }; let v = get_value(); let result = obj } result.name
}
function user.test_sequential_lambdas(obj: user.Outer) -> int  [expr] {
  { let get_name = () -> string { {  } obj.name }; let get_value = () -> int { {  } obj.inner.value }; let n = get_name() } get_value()
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "inner": self.inner.to_json(), "name": self.name.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": self.value.to_json() }
}

--- captures ---
lambda () in test_captured_field_access: captures [obj]
lambda () in test_captured_nested_field: captures [obj]
lambda () in test_no_leak_after_lambda: captures [obj]
lambda () in ?: captures [obj]
lambda () in test_sequential_lambdas: captures [obj]
lambda () in test_sequential_lambdas: captures [obj]
lambda (x) in test_lambda_param_and_capture: captures [obj]
