baml_language/crates/baml_tests/snapshots/compiles/lambda_field_access/baml_tests__compiles__lambda_field_access__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.Inner.from_json(j: baml.json.json) -> Inner {
    // Locals:
    let _0: Inner // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(Inner);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Outer.from_json(j: baml.json.json) -> Outer {
    // Locals:
    let _0: Outer // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(Outer);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.test_captured_field_access(obj: Outer) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: Outer // obj // param [captured]
    let _2: () -> string throws never // get_name
    let _3: () -> string throws never

    bb0: {
        _2 = make_closure lambda[0](copy _1);
        _3 = copy _2;
        _0 = call copy _3() -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[0]
fn .<lambda(test_captured_field_access, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = copy capture[0].1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.test_captured_nested_field(obj: Outer) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: Outer // obj // param [captured]
    let _2: () -> int throws never // get_value
    let _3: () -> int throws never

    bb0: {
        _2 = make_closure lambda[0](copy _1);
        _3 = copy _2;
        _0 = call copy _3() -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[0]
fn .<lambda(test_captured_nested_field, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = copy capture[0].0.0;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.test_lambda_param_and_capture(obj: Outer) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: Outer // obj // param [captured]
    let _2: (int) -> int throws never // add_to_value
    let _3: (int) -> int throws never

    bb0: {
        _2 = make_closure lambda[0](copy _1);
        _3 = copy _2;
        _0 = call copy _3(const 10_i64) -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[0]
fn .<lambda(test_lambda_param_and_capture, 0)>(x: int) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: int // x // param
    let _2: int

    bb0: {
        _2 = copy capture[0].0.0;
        _0 = copy _1 + copy _2;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.test_nested_lambda_capture(obj: Outer) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: Outer // obj // param [captured]
    let _2: () -> string throws never // outer_fn
    let _3: () -> string throws never

    bb0: {
        _2 = make_closure lambda[0](copy _1);
        _3 = copy _2;
        _0 = call copy _3() -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[0]
fn .<lambda(test_nested_lambda_capture, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: () -> string throws never // inner_fn
    let _2: () -> string throws never

    bb0: {
        _1 = make_closure lambda[0](copy capture[0]);
        _2 = copy _1;
        _0 = call copy _2() -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[0]
fn .<lambda(<lambda(test_nested_lambda_capture, 0)>, 1)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = copy capture[0].1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.test_no_leak_after_lambda(obj: Outer) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: Outer // obj // param [captured]
    let _2: () -> int throws never // get_value
    let _3: int // v
    let _4: () -> int throws never
    let _5: Outer // result

    bb0: {
        _2 = make_closure lambda[0](copy _1);
        _4 = copy _2;
        _3 = call copy _4() -> [bb1];
    }

    bb1: {
        _5 = copy _1;
        _0 = copy _5.1;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

// lambda[0]
fn .<lambda(test_no_leak_after_lambda, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = copy capture[0].0.0;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.test_sequential_lambdas(obj: Outer) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: Outer // obj // param [captured]
    let _2: () -> string throws never // get_name
    let _3: () -> int throws never // get_value
    let _4: string // n
    let _5: () -> string throws never
    let _6: () -> int throws never

    bb0: {
        _2 = make_closure lambda[0](copy _1);
        _3 = make_closure lambda[1](copy _1);
        _5 = copy _2;
        _4 = call copy _5() -> [bb1];
    }

    bb1: {
        _6 = copy _3;
        _0 = call copy _6() -> [bb2];
    }

    bb2: {
        return;
    }
}

// lambda[0]
fn .<lambda(test_sequential_lambdas, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = copy capture[0].1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

// lambda[1]
fn .<lambda(test_sequential_lambdas, 1)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = copy capture[0].0.0;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.Outer.to_json(self: Outer) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: Outer // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(Outer);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Inner.to_json(self: Inner) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: Inner // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(Inner);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}
