baml_language/crates/baml_tests/snapshots/compiles/lambda_field_access/baml_tests__compiles__lambda_field_access__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Inner {
  value: int
}
class user.Outer {
  inner: user.Inner
  name: string
}
function user.test_captured_field_access(obj: user.Outer) -> string throws never {
  { : string
    let get_name = : () -> string throws never
      () -> string { ... } : () -> string throws never
        {
          obj.name
        }
    get_name() : string
  }
}
lambda user.test_captured_field_access {
}
function user.test_captured_nested_field(obj: user.Outer) -> int throws never {
  { : int
    let get_value = : () -> int throws never
      () -> int { ... } : () -> int throws never
        {
          obj.inner.value
        }
    get_value() : int
  }
}
lambda user.test_captured_nested_field {
}
function user.test_no_leak_after_lambda(obj: user.Outer) -> string throws never {
  { : string
    let get_value = : () -> int throws never
      () -> int { ... } : () -> int throws never
        {
          obj.inner.value
        }
    let v = get_value() : int
    let result = obj : user.Outer
    result.name : string
  }
}
lambda user.test_no_leak_after_lambda {
}
function user.test_nested_lambda_capture(obj: user.Outer) -> string throws never {
  { : string
    let outer_fn = : () -> string throws never
      () -> { ... } : () -> string throws never
        {
          let inner_fn = ...
            () -> string { ... }
              {
                obj.name
              }
          inner_fn()
        }
    outer_fn() : string
  }
}
lambda user.test_nested_lambda_capture {
}
lambda user.test_nested_lambda_capture {
}
function user.test_sequential_lambdas(obj: user.Outer) -> int throws never {
  { : int
    let get_name = : () -> string throws never
      () -> string { ... } : () -> string throws never
        {
          obj.name
        }
    let get_value = : () -> int throws never
      () -> int { ... } : () -> int throws never
        {
          obj.inner.value
        }
    let n = get_name() : string
    get_value() : int
  }
}
lambda user.test_sequential_lambdas {
}
lambda user.test_sequential_lambdas {
}
function user.test_lambda_param_and_capture(obj: user.Outer) -> int throws never {
  { : int
    let add_to_value = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x + obj.inner.value
        }
    add_to_value(10) : int
  }
}
lambda user.test_lambda_param_and_capture {
}
class user.Inner$stream {
  value: null | int
}
class user.Outer$stream {
  inner: null | user.Inner$stream
  name: null | string
}
