baml_language/crates/baml_tests/snapshots/compiles/lambda_field_access/baml_tests__compiles__lambda_field_access__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 24106
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
