baml_language/crates/baml_tests/snapshots/compiles/lambda_field_access/baml_tests__compiles__lambda_field_access__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.test_captured_field_access(obj: Outer) -> string {
    load_var ?1
    make_cell
    store_var ?1
    load_var obj
    load_const ?
    make_closure .<lambda(test_captured_field_access, 0)>
    call_indirect
    return
}

function user.test_captured_nested_field(obj: Outer) -> int {
    load_var ?1
    make_cell
    store_var ?1
    load_var obj
    load_const ?
    make_closure .<lambda(test_captured_nested_field, 0)>
    call_indirect
    return
}

function user.test_lambda_param_and_capture(obj: Outer) -> int {
    load_var ?1
    make_cell
    store_var ?1
    load_const 10
    load_var obj
    load_const ?
    make_closure .<lambda(test_lambda_param_and_capture, 0)>
    call_indirect
    return
}

function user.test_nested_lambda_capture(obj: Outer) -> string {
    load_var ?1
    make_cell
    store_var ?1
    load_var obj
    load_const ?
    make_closure .<lambda(test_nested_lambda_capture, 0)>
    call_indirect
    return
}

function user.test_no_leak_after_lambda(obj: Outer) -> string {
    load_var ?1
    make_cell
    store_var ?1
    load_var obj
    load_const ?
    make_closure .<lambda(test_no_leak_after_lambda, 0)>
    call_indirect
    store_var v
    load_deref ?1
    load_field .name
    return
}

function user.test_sequential_lambdas(obj: Outer) -> int {
    load_var ?1
    make_cell
    store_var ?1
    load_var obj
    load_const ?
    make_closure .<lambda(test_sequential_lambdas, 0)>
    call_indirect
    store_var n
    load_var obj
    load_const ?
    make_closure .<lambda(test_sequential_lambdas, 1)>
    call_indirect
    return
}
